Convert plantation fields to registry